--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 name: FoinB
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: What The Fuck?!?
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: /images/avatar-hell.png
 
 #
 # Flags below are optional
