--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -1,27 +1,27 @@
 # Theme customization - please change from the defaults!
 
 # Color for top bar, links, etc
-highlight_color: '#3498db'
+highlight_color: '#4E8672'
 
 # Profile links on the left sidebar, leave blank to ignore
 social:
-  github: swanson
+  github: foinb
   #bitbucket: philipj
-  hacker_news: swanson
+  #hacker_news: swanson
   #stackexchange: 348619
   #stackoverflow: 348619
-  twitter: _swanson
+  twitter: foinb
   #facebook: zuck
   #tumblr: animalygifs
   #linkedin: philipjagielski
   #gplus: 110552447039675960964
   #gravatar: 86e6ff8f75f9daef42d53b7f8002fd95
-  #flickr: johndoe
+  flickr: foinb
 
 # "Hi, I'm _______"
-name: Matt Swanson
-email: test@example.com
-tagline: "weak opinions, strongly held"
+name: FoinBn
+email: info@foinb.de
+tagline: "What the Fuck?!?"
 
 # Google Analytics key, leave blank to ignore
 google_analytics_key: UA-xxxx-x
