--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -1,7 +1,7 @@
 # Theme customization - please change from the defaults!
 
 # Color for top bar, links, etc
-highlight_color: '#4E8672'
+highlight_color: '#000000'
 
 # Profile links on the left sidebar, leave blank to ignore
 social:
@@ -19,7 +19,7 @@ social:
   flickr: foinb
 
 # "Hi, I'm _______"
-name: FoinBn
+name: FoinB
 email: info@foinb.de
 tagline: "What the Fuck?!?"
 
